--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,19 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ronalissaputra</title>
   </head>
-  <body>
+  <body class="" id="body">
     <div id="root"></div>
     <!--  -->
+    <script type="text/javascript">
+      window.$crisp = [];
+      window.CRISP_WEBSITE_ID = "40f99e28-971c-45f5-8890-2d812fec0424";
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://client.crisp.chat/l.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
   </body>
 </html>
